# checkonaut

./: .editorconfig  .gitignore  Cargo.toml  README.md  THIRDPARTY.toml  deny.toml  justfile
.github/workflows/: ci.yaml  zizmor.yaml
examples/checkonaut-module/check/: check.lua
examples/kubernetes/: example-pod.yaml  pod.lua
prompting/: README.md  prompt.md
src/: check.rs  file.rs  lib.rs  lua.rs  main.rs  test.rs
tests/always-invalid/: test.lua
tests/always-valid/: always_valid_test.lua  returns-empty.lua  returns_nil.lua
tests/calls-error/: test.lua  test_test.lua
tests/require-file/: check.lua  check_test.lua  example.lua
tests/warning/: test.lua  test_test.lua
