[package]
name = "checkonaut"
version = "0.1.0"
edition = "2024"
publish = false
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.5.51", features = ["cargo", "derive", "env"] }
color-eyre = "0.6.5"
eyre = "0.6.12"
mlua = { version = "0.11.4", features = ["lua54", "serde"] }
rayon = "1.11.0"
saphyr = "0.0.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_norway = "0.9.42"
snafu = "0.8.9"
test-temp-dir = "0.6.0"
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
walkdir = "2.5.0"

[lib]
name = "checkonaut"
path = "src/lib.rs"

[[bin]]
name = "checkonaut"
path = "src/main.rs"

[dev-dependencies]
tracing-test = "0.2.5"
